<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start">Start</string>
    <string name="tv_result">Result</string>
    <string name="button_share">Share</string>
    <string name="button_back">Back</string>
    <string name="button_exit">Exit</string>
    <string name="button_previous">Previous</string>
    <string name="button_next1">Next</string>
    <string name="button_next2">Submit</string>
    <string name="picture_result">picture_result</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
</resources>